# lygiagretus-egzas

./: .gitignore  README.md  lint.py  run.py
cpp_app/: CMakeLists.txt
cpp_app/src/: config.h  data_io.cpp  data_io.h  kernels.cl  main.cpp  opencl_processor.cpp  opencl_processor.h  types.h  utils.h  zmq_comm.cpp  zmq_comm.h
data/: IFF-3-2_AleksandraviciusLinas_L2_dat_1.json  IFF-3-2_AleksandraviciusLinas_L2_dat_2.json  IFF-3-2_AleksandraviciusLinas_L2_dat_3.json  IFF-3-2_AleksandraviciusLinas_L2_dat_4.json  generate_data.py
python_app/: colors.py  config.py  functions.py  main.py  processes.py  requirements.txt
